--- a/Pear/Controllers/Onboarding/Get Started Flow/DoDont Input/GetStartedDoDontViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/DoDont Input/GetStartedDoDontViewController.storyboard
@@ -18,38 +18,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7dd-td-X1n">
-                                <rect key="frame" x="20" y="40" width="40" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="Ktz-iP-Qq4"/>
-                                    <constraint firstAttribute="height" constant="40" id="tmM-3P-nxq"/>
-                                </constraints>
-                                <state key="normal" image="onboarding-back-button"/>
-                                <connections>
-                                    <action selector="backButtonClicked:" destination="hsO-eP-Zhu" eventType="touchUpInside" id="2EO-c4-xFi"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Write dos/dont's" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="XlG-fB-jrv">
-                                <rect key="frame" x="30" y="104" width="315" height="27.5"/>
+                                <rect key="frame" x="30" y="82" width="315" height="27.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-do-dont" translatesAutoresizingMaskIntoConstraints="NO" id="Ycg-vo-mO5">
-                                <rect key="frame" x="157.5" y="36" width="60" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="6Md-Ep-JZC"/>
-                                    <constraint firstAttribute="width" constant="60" id="8Yc-bq-nVV"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Should we ask about their family? Talk about food? Help us out!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fT3-Yw-8Vy">
-                                <rect key="frame" x="20" y="139.5" width="335" height="38.5"/>
+                                <rect key="frame" x="20" y="117.5" width="335" height="38.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5hg-ug-CTH">
-                                <rect key="frame" x="0.0" y="186" width="375" height="403"/>
+                                <rect key="frame" x="0.0" y="164" width="375" height="425"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gbW-Sp-2JO">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
@@ -83,34 +65,89 @@
                                     <action selector="nextButtonClicked:" destination="hsO-eP-Zhu" eventType="touchUpInside" id="UuJ-xb-7fy"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dZe-nQ-qZn" userLabel="Header Container">
+                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yLB-rv-bd9" userLabel="Back Button">
+                                        <rect key="frame" x="12" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Jea-MW-0oQ"/>
+                                            <constraint firstAttribute="width" constant="40" id="RjW-S8-Nhq"/>
+                                        </constraints>
+                                        <state key="normal" image="onboarding-back-button">
+                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backButtonClicked:" destination="hsO-eP-Zhu" eventType="touchUpInside" id="Wmc-Mg-kWw"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-do-dont" translatesAutoresizingMaskIntoConstraints="NO" id="h6Y-uW-skp" userLabel="Center Icon">
+                                        <rect key="frame" x="167.5" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="h6Y-uW-skp" secondAttribute="height" multiplier="1:1" id="Q4n-I9-gKk"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVK-aX-5Sk" userLabel="Extra Button">
+                                        <rect key="frame" x="319" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="jvk-Fv-CTE"/>
+                                            <constraint firstAttribute="width" constant="40" id="zPb-kq-1Ig"/>
+                                        </constraints>
+                                        <state key="normal" image="onboarding-close-button">
+                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="83X-w4-d7T" userLabel="Progress View">
+                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
+                                        <color key="backgroundColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="GII-qx-gtx"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="83X-w4-d7T" firstAttribute="leading" secondItem="dZe-nQ-qZn" secondAttribute="leading" id="76c-po-4Jk"/>
+                                    <constraint firstAttribute="height" constant="50" id="8yR-do-8bL"/>
+                                    <constraint firstItem="yLB-rv-bd9" firstAttribute="centerY" secondItem="dZe-nQ-qZn" secondAttribute="centerY" id="9zd-fA-bUR"/>
+                                    <constraint firstAttribute="trailing" secondItem="lVK-aX-5Sk" secondAttribute="trailing" constant="16" id="Ojz-4P-BMa"/>
+                                    <constraint firstItem="83X-w4-d7T" firstAttribute="width" secondItem="dZe-nQ-qZn" secondAttribute="width" id="V0T-vP-coy" userLabel="Progress View Width Constraint"/>
+                                    <constraint firstAttribute="bottom" secondItem="83X-w4-d7T" secondAttribute="bottom" id="ZT9-c2-L3R"/>
+                                    <constraint firstItem="h6Y-uW-skp" firstAttribute="centerY" secondItem="dZe-nQ-qZn" secondAttribute="centerY" id="goP-dj-ufE"/>
+                                    <constraint firstItem="lVK-aX-5Sk" firstAttribute="centerY" secondItem="dZe-nQ-qZn" secondAttribute="centerY" id="hnv-Ul-eNO"/>
+                                    <constraint firstItem="h6Y-uW-skp" firstAttribute="centerX" secondItem="dZe-nQ-qZn" secondAttribute="centerX" id="nFA-yl-IID"/>
+                                    <constraint firstItem="h6Y-uW-skp" firstAttribute="height" secondItem="dZe-nQ-qZn" secondAttribute="height" constant="-10" id="nwe-gl-qBl"/>
+                                    <constraint firstItem="yLB-rv-bd9" firstAttribute="leading" secondItem="dZe-nQ-qZn" secondAttribute="leading" constant="12" id="sec-M3-iDv"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="XlG-fB-jrv" firstAttribute="centerX" secondItem="G71-ex-rp4" secondAttribute="centerX" id="1Qv-IL-fko"/>
                             <constraint firstItem="G71-ex-rp4" firstAttribute="trailing" secondItem="fT3-Yw-8Vy" secondAttribute="trailing" constant="20" id="3cS-Oy-lL6"/>
                             <constraint firstItem="fT3-Yw-8Vy" firstAttribute="top" secondItem="XlG-fB-jrv" secondAttribute="bottom" constant="8" id="3kw-KR-mJt"/>
-                            <constraint firstItem="7dd-td-X1n" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" constant="20" id="6wi-Sh-0ur"/>
+                            <constraint firstItem="dZe-nQ-qZn" firstAttribute="top" secondItem="G71-ex-rp4" secondAttribute="top" id="7sQ-Tn-aKd"/>
                             <constraint firstItem="tgd-1Y-rYX" firstAttribute="top" secondItem="5hg-ug-CTH" secondAttribute="bottom" constant="8" id="99b-PR-dTi"/>
                             <constraint firstItem="XlG-fB-jrv" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" constant="30" id="ESg-9b-atr"/>
                             <constraint firstItem="G71-ex-rp4" firstAttribute="bottom" secondItem="tgd-1Y-rYX" secondAttribute="bottom" constant="20" id="Fg9-Ne-cqW"/>
                             <constraint firstItem="G71-ex-rp4" firstAttribute="trailing" secondItem="5hg-ug-CTH" secondAttribute="trailing" id="JQm-KZ-SVh"/>
+                            <constraint firstItem="dZe-nQ-qZn" firstAttribute="trailing" secondItem="G71-ex-rp4" secondAttribute="trailing" id="KRo-aC-hWI"/>
                             <constraint firstItem="fT3-Yw-8Vy" firstAttribute="centerX" secondItem="G71-ex-rp4" secondAttribute="centerX" id="OWa-Vd-htz"/>
-                            <constraint firstItem="7dd-td-X1n" firstAttribute="top" secondItem="G71-ex-rp4" secondAttribute="top" constant="20" id="RVO-t1-Jk8"/>
-                            <constraint firstItem="Ycg-vo-mO5" firstAttribute="top" secondItem="G71-ex-rp4" secondAttribute="top" constant="16" id="Sbm-AJ-k8d"/>
+                            <constraint firstItem="XlG-fB-jrv" firstAttribute="top" secondItem="dZe-nQ-qZn" secondAttribute="bottom" constant="12" id="P43-bh-Bc6"/>
+                            <constraint firstItem="dZe-nQ-qZn" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" id="SIN-Ap-Zg6"/>
                             <constraint firstItem="tgd-1Y-rYX" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" constant="20" id="Squ-DN-aeh"/>
-                            <constraint firstItem="Ycg-vo-mO5" firstAttribute="centerX" secondItem="G71-ex-rp4" secondAttribute="centerX" id="UDJ-oI-ftM"/>
                             <constraint firstItem="G71-ex-rp4" firstAttribute="trailing" secondItem="tgd-1Y-rYX" secondAttribute="trailing" constant="20" id="VzL-N2-Rgy"/>
                             <constraint firstItem="5hg-ug-CTH" firstAttribute="top" secondItem="fT3-Yw-8Vy" secondAttribute="bottom" constant="8" id="XXq-5W-kW1"/>
                             <constraint firstItem="5hg-ug-CTH" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" id="bQV-8R-KIB"/>
                             <constraint firstItem="G71-ex-rp4" firstAttribute="trailing" secondItem="XlG-fB-jrv" secondAttribute="trailing" constant="30" id="eiI-F9-XNn"/>
                             <constraint firstItem="fT3-Yw-8Vy" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" constant="20" id="ib6-4g-et1"/>
-                            <constraint firstItem="XlG-fB-jrv" firstAttribute="top" secondItem="Ycg-vo-mO5" secondAttribute="bottom" constant="8" id="r7h-04-ytZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="G71-ex-rp4"/>
                     </view>
                     <connections>
                         <outlet property="nextButton" destination="tgd-1Y-rYX" id="VMk-B0-TAf"/>
                         <outlet property="nextButtonBottomConstraint" destination="Fg9-Ne-cqW" id="WbN-mV-xPR"/>
+                        <outlet property="progressWidthConstraint" destination="V0T-vP-coy" id="f2V-hz-8R3"/>
                         <outlet property="scrollView" destination="5hg-ug-CTH" id="X6D-V6-OeM"/>
                         <outlet property="stackView" destination="gbW-Sp-2JO" id="d2D-DN-W0B"/>
                         <outlet property="subtitleLabel" destination="fT3-Yw-8Vy" id="fEN-qn-hXN"/>
@@ -123,7 +160,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-back-button" width="96" height="96"/>
+        <image name="onboarding-back-button" width="30" height="30"/>
+        <image name="onboarding-close-button" width="30" height="30"/>
         <image name="onboarding-icon-do-dont" width="50" height="48"/>
     </resources>
 </document>
