--- a/Pear/Controllers/Onboarding/Get Started Flow/Photo Input/GetStartedPhotoInputViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Photo Input/GetStartedPhotoInputViewController.storyboard
@@ -32,7 +32,7 @@
                                 </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Hkq-lK-kn9">
-                                <rect key="frame" x="20" y="179.5" width="335" height="335"/>
+                                <rect key="frame" x="20" y="157.5" width="335" height="335"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Hkq-lK-kn9" secondAttribute="height" multiplier="1:1" id="nTI-i5-kvs"/>
@@ -104,55 +104,90 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QkT-hQ-ugR">
-                                <rect key="frame" x="20" y="40" width="40" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="b4O-jA-3GB"/>
-                                    <constraint firstAttribute="height" constant="40" id="rpT-cv-LEC"/>
-                                </constraints>
-                                <state key="normal" image="onboarding-back-button"/>
-                                <connections>
-                                    <action selector="backButtonClicked:" destination="ijs-Hi-GZa" eventType="touchUpInside" id="Gqz-kb-aEn"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Got pics?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="bub-op-HQu">
-                                <rect key="frame" x="20" y="104" width="335" height="28"/>
+                                <rect key="frame" x="20" y="82" width="335" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-camera" translatesAutoresizingMaskIntoConstraints="NO" id="NPS-LL-h2c">
-                                <rect key="frame" x="157.5" y="36" width="60" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="R3d-Ac-lwi"/>
-                                    <constraint firstAttribute="width" constant="60" id="ZYJ-fa-dS6"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Upload some flattering photos of your friend!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="s1A-Za-I96">
-                                <rect key="frame" x="20" y="140" width="335" height="19.5"/>
+                                <rect key="frame" x="20" y="118" width="335" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bgU-2g-VV2" userLabel="Header Container">
+                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1eZ-Em-SF4" userLabel="Back Button">
+                                        <rect key="frame" x="12" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="0PH-Cm-Bwx"/>
+                                            <constraint firstAttribute="height" constant="40" id="DoV-Vh-NP0"/>
+                                        </constraints>
+                                        <state key="normal" image="onboarding-back-button">
+                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backButtonClicked:" destination="ijs-Hi-GZa" eventType="touchUpInside" id="91D-RK-Tf1"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-camera" translatesAutoresizingMaskIntoConstraints="NO" id="huy-u0-EQn" userLabel="Center Icon">
+                                        <rect key="frame" x="167.5" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="huy-u0-EQn" secondAttribute="height" multiplier="1:1" id="OfW-vg-NSs"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V6h-Yq-M6j" userLabel="Extra Button">
+                                        <rect key="frame" x="319" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="LcD-Id-kUy"/>
+                                            <constraint firstAttribute="width" constant="40" id="mNP-Op-tJv"/>
+                                        </constraints>
+                                        <state key="normal" image="onboarding-close-button">
+                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ta2-qc-wTR" userLabel="Progress View">
+                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
+                                        <color key="backgroundColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="4zr-Qt-CHj"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ta2-qc-wTR" firstAttribute="leading" secondItem="bgU-2g-VV2" secondAttribute="leading" id="2ba-og-aKs"/>
+                                    <constraint firstAttribute="height" constant="50" id="Irk-4z-18y"/>
+                                    <constraint firstAttribute="bottom" secondItem="ta2-qc-wTR" secondAttribute="bottom" id="RHp-wW-Hrr"/>
+                                    <constraint firstItem="V6h-Yq-M6j" firstAttribute="centerY" secondItem="bgU-2g-VV2" secondAttribute="centerY" id="YmX-rc-teS"/>
+                                    <constraint firstAttribute="trailing" secondItem="V6h-Yq-M6j" secondAttribute="trailing" constant="16" id="cdY-Nc-TMT"/>
+                                    <constraint firstItem="huy-u0-EQn" firstAttribute="centerX" secondItem="bgU-2g-VV2" secondAttribute="centerX" id="g1p-2H-uDO"/>
+                                    <constraint firstItem="1eZ-Em-SF4" firstAttribute="centerY" secondItem="bgU-2g-VV2" secondAttribute="centerY" id="ghr-pi-9k6"/>
+                                    <constraint firstItem="huy-u0-EQn" firstAttribute="centerY" secondItem="bgU-2g-VV2" secondAttribute="centerY" id="mtJ-v2-vtk"/>
+                                    <constraint firstItem="huy-u0-EQn" firstAttribute="height" secondItem="bgU-2g-VV2" secondAttribute="height" constant="-10" id="ncC-OI-KkL"/>
+                                    <constraint firstItem="ta2-qc-wTR" firstAttribute="width" secondItem="bgU-2g-VV2" secondAttribute="width" id="qGJ-hE-Mf8" userLabel="Progress View Width Constraint"/>
+                                    <constraint firstItem="1eZ-Em-SF4" firstAttribute="leading" secondItem="bgU-2g-VV2" secondAttribute="leading" constant="12" id="vsh-6B-AI1"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Hkq-lK-kn9" firstAttribute="leading" secondItem="Lo8-ZS-yFe" secondAttribute="leading" constant="20" id="14O-99-6r5"/>
                             <constraint firstItem="eSH-x6-HWS" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Hkq-lK-kn9" secondAttribute="bottom" constant="20" id="3p6-tD-siD"/>
                             <constraint firstItem="Lo8-ZS-yFe" firstAttribute="trailing" secondItem="bub-op-HQu" secondAttribute="trailing" constant="20" id="7So-tI-vQa"/>
-                            <constraint firstItem="bub-op-HQu" firstAttribute="top" secondItem="NPS-LL-h2c" secondAttribute="bottom" constant="8" id="8Pe-gj-jAb"/>
                             <constraint firstItem="s1A-Za-I96" firstAttribute="top" secondItem="bub-op-HQu" secondAttribute="bottom" constant="8" id="9B0-yj-uiF"/>
                             <constraint firstItem="Hkq-lK-kn9" firstAttribute="top" secondItem="s1A-Za-I96" secondAttribute="bottom" constant="20" id="CVg-wQ-jZ2"/>
+                            <constraint firstItem="bgU-2g-VV2" firstAttribute="leading" secondItem="Lo8-ZS-yFe" secondAttribute="leading" id="GL5-zp-iHj"/>
                             <constraint firstItem="s1A-Za-I96" firstAttribute="leading" secondItem="Lo8-ZS-yFe" secondAttribute="leading" constant="20" id="J9h-z0-bBT"/>
-                            <constraint firstItem="NPS-LL-h2c" firstAttribute="centerX" secondItem="Lo8-ZS-yFe" secondAttribute="centerX" id="K1P-YP-uF8"/>
                             <constraint firstItem="Lo8-ZS-yFe" firstAttribute="bottom" secondItem="eSH-x6-HWS" secondAttribute="bottom" constant="20" id="SBD-x9-HJy"/>
-                            <constraint firstItem="QkT-hQ-ugR" firstAttribute="leading" secondItem="Lo8-ZS-yFe" secondAttribute="leading" constant="20" id="Vji-EG-cNB"/>
                             <constraint firstItem="eSH-x6-HWS" firstAttribute="leading" secondItem="Lo8-ZS-yFe" secondAttribute="leading" constant="20" id="WZh-kH-b7T"/>
                             <constraint firstItem="Lo8-ZS-yFe" firstAttribute="trailing" secondItem="eSH-x6-HWS" secondAttribute="trailing" constant="20" id="dsE-6z-A2Q"/>
                             <constraint firstItem="bub-op-HQu" firstAttribute="leading" secondItem="Lo8-ZS-yFe" secondAttribute="leading" constant="20" id="h5T-lp-EcA"/>
-                            <constraint firstItem="NPS-LL-h2c" firstAttribute="top" secondItem="Lo8-ZS-yFe" secondAttribute="top" constant="16" id="llH-6g-nfp"/>
-                            <constraint firstItem="bub-op-HQu" firstAttribute="top" secondItem="NPS-LL-h2c" secondAttribute="bottom" constant="8" id="rO7-Fd-gpW"/>
-                            <constraint firstItem="QkT-hQ-ugR" firstAttribute="top" secondItem="Lo8-ZS-yFe" secondAttribute="top" constant="20" id="uN0-U4-2Ld"/>
+                            <constraint firstItem="bub-op-HQu" firstAttribute="top" secondItem="bgU-2g-VV2" secondAttribute="bottom" constant="12" id="lVv-FH-2wC"/>
+                            <constraint firstItem="bgU-2g-VV2" firstAttribute="trailing" secondItem="Lo8-ZS-yFe" secondAttribute="trailing" id="nT8-HQ-ip9"/>
+                            <constraint firstItem="bgU-2g-VV2" firstAttribute="top" secondItem="Lo8-ZS-yFe" secondAttribute="top" id="o35-fk-K5t"/>
                             <constraint firstItem="Lo8-ZS-yFe" firstAttribute="trailing" secondItem="s1A-Za-I96" secondAttribute="trailing" constant="20" id="wiV-bM-vRI"/>
                             <constraint firstItem="s1A-Za-I96" firstAttribute="top" secondItem="bub-op-HQu" secondAttribute="bottom" constant="8" id="yF4-ql-hHC"/>
                             <constraint firstItem="Lo8-ZS-yFe" firstAttribute="trailing" secondItem="Hkq-lK-kn9" secondAttribute="trailing" constant="20" id="zlf-ew-NHP"/>
@@ -162,6 +197,7 @@
                     <connections>
                         <outlet property="collectionView" destination="Hkq-lK-kn9" id="P9y-pH-zd4"/>
                         <outlet property="nextButton" destination="eSH-x6-HWS" id="re2-nb-Zku"/>
+                        <outlet property="progressWidthConstraint" destination="qGJ-hE-Mf8" id="VeZ-E4-IV5"/>
                         <outlet property="subtitleLabel" destination="s1A-Za-I96" id="pkg-RO-UMI"/>
                         <outlet property="titleLabel" destination="bub-op-HQu" id="TYp-9t-hbc"/>
                     </connections>
@@ -173,8 +209,8 @@
     </scenes>
     <resources>
         <image name="onboarding-add-image-dotted-rectangle" width="110" height="110"/>
-        <image name="onboarding-back-button" width="96" height="96"/>
-        <image name="onboarding-close-button" width="96" height="96"/>
+        <image name="onboarding-back-button" width="30" height="30"/>
+        <image name="onboarding-close-button" width="30" height="30"/>
         <image name="onboarding-icon-camera" width="32" height="32"/>
     </resources>
 </document>
