--- a/Pear/Controllers/Onboarding/Get Started Flow/Age Input/GetStartedAgeViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Age Input/GetStartedAgeViewController.storyboard
@@ -76,9 +76,10 @@
                                         </state>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JBJ-8o-rjQ" userLabel="Progress View">
-                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
+                                        <rect key="frame" x="0.0" y="49" width="0.0" height="1"/>
                                         <color key="backgroundColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" id="dgh-cF-Pqv"/>
                                             <constraint firstAttribute="height" constant="1" id="i8X-0g-WJr"/>
                                         </constraints>
                                     </view>
@@ -95,7 +96,6 @@
                                     <constraint firstAttribute="trailing" secondItem="eux-9d-lTr" secondAttribute="trailing" constant="16" id="bER-Az-Dhb"/>
                                     <constraint firstItem="GiT-bc-Zc7" firstAttribute="height" secondItem="wkl-0n-H90" secondAttribute="height" constant="-10" id="djo-2z-69s"/>
                                     <constraint firstItem="GiT-bc-Zc7" firstAttribute="centerY" secondItem="wkl-0n-H90" secondAttribute="centerY" id="qJi-oN-ISm"/>
-                                    <constraint firstItem="JBJ-8o-rjQ" firstAttribute="width" secondItem="wkl-0n-H90" secondAttribute="width" id="uXp-iq-ps8"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wCM-Fb-M7m">
@@ -161,7 +161,7 @@
                         <outlet property="inputTextFieldTitle" destination="Pf9-RU-SeO" id="0dZ-hD-1ez"/>
                         <outlet property="nextButton" destination="eyq-sA-lOa" id="Dyz-OG-whq"/>
                         <outlet property="nextButtonBottomConstraint" destination="eAw-S7-KpM" id="plt-KN-ZP1"/>
-                        <outlet property="progressWidthConstraint" destination="uXp-iq-ps8" id="kfm-Ab-GNy"/>
+                        <outlet property="progressWidthConstraint" destination="dgh-cF-Pqv" id="gOM-Qt-myp"/>
                         <outlet property="secondTitleLabel" destination="8LB-f3-rJf" id="BoB-zG-WWv"/>
                     </connections>
                 </viewController>
