--- a/Pear/Controllers/Onboarding/Get Started Flow/DoDont Input/GetStartedDoDontViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/DoDont Input/GetStartedDoDontViewController.storyboard
@@ -98,9 +98,10 @@
                                         </state>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="83X-w4-d7T" userLabel="Progress View">
-                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
+                                        <rect key="frame" x="0.0" y="49" width="0.0" height="1"/>
                                         <color key="backgroundColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" id="ECq-YO-Idv"/>
                                             <constraint firstAttribute="height" constant="1" id="GII-qx-gtx"/>
                                         </constraints>
                                     </view>
@@ -111,7 +112,6 @@
                                     <constraint firstAttribute="height" constant="50" id="8yR-do-8bL"/>
                                     <constraint firstItem="yLB-rv-bd9" firstAttribute="centerY" secondItem="dZe-nQ-qZn" secondAttribute="centerY" id="9zd-fA-bUR"/>
                                     <constraint firstAttribute="trailing" secondItem="lVK-aX-5Sk" secondAttribute="trailing" constant="16" id="Ojz-4P-BMa"/>
-                                    <constraint firstItem="83X-w4-d7T" firstAttribute="width" secondItem="dZe-nQ-qZn" secondAttribute="width" id="V0T-vP-coy" userLabel="Progress View Width Constraint"/>
                                     <constraint firstAttribute="bottom" secondItem="83X-w4-d7T" secondAttribute="bottom" id="ZT9-c2-L3R"/>
                                     <constraint firstItem="h6Y-uW-skp" firstAttribute="centerY" secondItem="dZe-nQ-qZn" secondAttribute="centerY" id="goP-dj-ufE"/>
                                     <constraint firstItem="lVK-aX-5Sk" firstAttribute="centerY" secondItem="dZe-nQ-qZn" secondAttribute="centerY" id="hnv-Ul-eNO"/>
@@ -147,7 +147,7 @@
                     <connections>
                         <outlet property="nextButton" destination="tgd-1Y-rYX" id="VMk-B0-TAf"/>
                         <outlet property="nextButtonBottomConstraint" destination="Fg9-Ne-cqW" id="WbN-mV-xPR"/>
-                        <outlet property="progressWidthConstraint" destination="V0T-vP-coy" id="f2V-hz-8R3"/>
+                        <outlet property="progressWidthConstraint" destination="ECq-YO-Idv" id="mVc-WD-CZ4"/>
                         <outlet property="scrollView" destination="5hg-ug-CTH" id="X6D-V6-OeM"/>
                         <outlet property="stackView" destination="gbW-Sp-2JO" id="d2D-DN-W0B"/>
                         <outlet property="subtitleLabel" destination="fT3-Yw-8Vy" id="fEN-qn-hXN"/>
