--- a/Pear/Controllers/Onboarding/Get Started Flow/Gender Input/GetStartedChooseGenderViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Gender Input/GetStartedChooseGenderViewController.storyboard
@@ -83,7 +83,7 @@
                                     <constraint firstAttribute="width" constant="30" id="D45-05-TBb"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JTr-49-a0m">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JTr-49-a0m" userLabel="Header Container">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qGJ-ET-Jfy">
@@ -116,10 +116,11 @@
                                         </state>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KDY-hA-qWG">
-                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
+                                        <rect key="frame" x="0.0" y="49" width="0.0" height="1"/>
                                         <color key="backgroundColor" red="0.2627450980392157" green="0.29411764705882354" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="16W-72-fpN"/>
+                                            <constraint firstAttribute="width" id="MUm-Pk-dPm"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -130,7 +131,6 @@
                                     <constraint firstAttribute="trailing" secondItem="aZq-XF-dtq" secondAttribute="trailing" constant="16" id="QTu-ar-Yoi"/>
                                     <constraint firstAttribute="height" constant="50" id="R6t-Zr-3lg"/>
                                     <constraint firstItem="dlX-cp-uNy" firstAttribute="centerX" secondItem="JTr-49-a0m" secondAttribute="centerX" id="adb-mT-K6z"/>
-                                    <constraint firstItem="KDY-hA-qWG" firstAttribute="width" secondItem="JTr-49-a0m" secondAttribute="width" id="bKZ-BX-liw"/>
                                     <constraint firstItem="aZq-XF-dtq" firstAttribute="centerY" secondItem="JTr-49-a0m" secondAttribute="centerY" id="fHG-fG-x4Z"/>
                                     <constraint firstItem="dlX-cp-uNy" firstAttribute="centerY" secondItem="JTr-49-a0m" secondAttribute="centerY" id="gQ3-s9-tfQ"/>
                                     <constraint firstItem="KDY-hA-qWG" firstAttribute="leading" secondItem="JTr-49-a0m" secondAttribute="leading" id="jVr-EV-qVI"/>
@@ -170,6 +170,7 @@
                         <outlet property="femaleButton" destination="u1t-Uo-F03" id="oca-mO-qoi"/>
                         <outlet property="maleButton" destination="s3y-yT-P1l" id="qIa-mx-ikF"/>
                         <outlet property="nonbinaryButton" destination="6wL-mM-6zf" id="vFO-A8-s1S"/>
+                        <outlet property="progressWidthConstraint" destination="MUm-Pk-dPm" id="VA9-X7-p9v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UxH-gj-6qC" userLabel="First Responder" sceneMemberID="firstResponder"/>
