--- a/Pear/Controllers/Onboarding/Get Started Flow/Interests Input/GetStartedInterestsViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Interests Input/GetStartedInterestsViewController.storyboard
@@ -85,9 +85,10 @@
                                         </state>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vMg-gj-zsR" userLabel="Progress View">
-                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
+                                        <rect key="frame" x="0.0" y="49" width="0.0" height="1"/>
                                         <color key="backgroundColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" id="8st-yh-hPE"/>
                                             <constraint firstAttribute="height" constant="1" id="ok6-sJ-RuO"/>
                                         </constraints>
                                     </view>
@@ -97,7 +98,6 @@
                                     <constraint firstItem="vMg-gj-zsR" firstAttribute="leading" secondItem="qrO-Ec-V3K" secondAttribute="leading" id="46g-VB-I9V"/>
                                     <constraint firstAttribute="trailing" secondItem="CV6-Lg-4t7" secondAttribute="trailing" constant="16" id="5vh-3E-04K"/>
                                     <constraint firstAttribute="height" constant="50" id="GhJ-pu-JK1"/>
-                                    <constraint firstItem="vMg-gj-zsR" firstAttribute="width" secondItem="qrO-Ec-V3K" secondAttribute="width" id="KhT-hi-rJv" userLabel="Progress View Width Constraint"/>
                                     <constraint firstItem="RAO-O7-OmB" firstAttribute="leading" secondItem="qrO-Ec-V3K" secondAttribute="leading" constant="12" id="Kmj-sx-yul"/>
                                     <constraint firstItem="YXw-Br-Rup" firstAttribute="height" secondItem="qrO-Ec-V3K" secondAttribute="height" constant="-10" id="SBa-F3-80S"/>
                                     <constraint firstItem="YXw-Br-Rup" firstAttribute="centerX" secondItem="qrO-Ec-V3K" secondAttribute="centerX" id="dhK-mV-31O"/>
@@ -131,7 +131,7 @@
                     </view>
                     <connections>
                         <outlet property="nextButton" destination="u2i-hK-Iq2" id="qCn-qK-WfE"/>
-                        <outlet property="progressWidthConstraint" destination="KhT-hi-rJv" id="nnE-y6-Rfh"/>
+                        <outlet property="progressWidthConstraint" destination="8st-yh-hPE" id="Apr-Xf-NMB"/>
                         <outlet property="scrollView" destination="1Sm-rI-HBs" id="SZn-jq-5hr"/>
                         <outlet property="subtitleLabel" destination="b1g-wh-uyv" id="DtR-yR-HPP"/>
                         <outlet property="titleLabel" destination="3yI-nq-wZx" id="CfB-sN-79E"/>
