--- a/Pear/Controllers/Onboarding/Get Started Flow/Notify Friend/GetStartedNotifyFriendViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Notify Friend/GetStartedNotifyFriendViewController.storyboard
@@ -56,37 +56,6 @@
                                     <constraint firstAttribute="height" constant="60" id="g5R-sV-RfV"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pjo-8R-9GC">
-                                <rect key="frame" x="44.5" y="207.5" width="310.5" height="40"/>
-                                <color key="tintColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="99C-sv-tsh"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardType="phonePad" textContentType="tel"/>
-                            </textField>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LEg-dp-OfI">
-                                <rect key="frame" x="0.0" y="246.5" width="375" height="1"/>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="4Nb-QU-vBe"/>
-                                </constraints>
-                            </view>
-                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LV8-am-Vhu">
-                                <rect key="frame" x="333" y="214.5" width="26" height="26"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="26" id="ECU-4n-W4f"/>
-                                    <constraint firstAttribute="width" constant="26" id="cOz-En-xpP"/>
-                                </constraints>
-                                <state key="normal" image="onboarding-clear-text-button"/>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qeo-XD-P2E">
-                                <rect key="frame" x="16" y="215.5" width="20.5" height="24"/>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="20"/>
-                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GRJ-RZ-ANp">
                                 <rect key="frame" x="20" y="597" width="335" height="50"/>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -98,38 +67,78 @@
                                     <action selector="nextButtonClicked:" destination="4y9-g9-KBp" eventType="touchUpInside" id="Aui-mc-skJ"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SCr-Mf-fW4">
+                                <rect key="frame" x="20" y="207.5" width="335" height="70"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4gr-IX-Nqt">
+                                        <rect key="frame" x="64.5" y="20" width="264.5" height="46"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardType="phonePad" textContentType="tel"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQg-eh-z5Y">
+                                        <rect key="frame" x="10" y="6" width="69.5" height="14"/>
+                                        <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="11"/>
+                                        <color key="textColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-us-flag" translatesAutoresizingMaskIntoConstraints="NO" id="pRs-S4-r7z">
+                                        <rect key="frame" x="10" y="31" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="nPt-Oy-v6F"/>
+                                            <constraint firstAttribute="width" constant="24" id="x2l-Ol-BgK"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lnC-vq-pvr">
+                                        <rect key="frame" x="38" y="32.5" width="18.5" height="21.5"/>
+                                        <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="18"/>
+                                        <color key="textColor" red="0.62352941179999999" green="0.64313725489999995" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="pRs-S4-r7z" firstAttribute="leading" secondItem="fQg-eh-z5Y" secondAttribute="leading" id="IyK-qb-BgQ"/>
+                                    <constraint firstItem="fQg-eh-z5Y" firstAttribute="leading" secondItem="SCr-Mf-fW4" secondAttribute="leading" constant="10" id="Lbu-1c-UpU"/>
+                                    <constraint firstItem="pRs-S4-r7z" firstAttribute="centerY" secondItem="4gr-IX-Nqt" secondAttribute="centerY" id="bku-6u-0Sn"/>
+                                    <constraint firstItem="lnC-vq-pvr" firstAttribute="centerY" secondItem="pRs-S4-r7z" secondAttribute="centerY" id="bny-7D-WDh"/>
+                                    <constraint firstAttribute="bottom" secondItem="4gr-IX-Nqt" secondAttribute="bottom" constant="4" id="dJx-hr-KcS"/>
+                                    <constraint firstAttribute="trailing" secondItem="4gr-IX-Nqt" secondAttribute="trailing" constant="6" id="hzh-5q-f7I"/>
+                                    <constraint firstAttribute="height" constant="70" id="j4x-0b-Ooh"/>
+                                    <constraint firstItem="lnC-vq-pvr" firstAttribute="leading" secondItem="pRs-S4-r7z" secondAttribute="trailing" constant="4" id="kwo-dO-C3P"/>
+                                    <constraint firstItem="4gr-IX-Nqt" firstAttribute="top" secondItem="fQg-eh-z5Y" secondAttribute="bottom" id="oSy-xi-tQr"/>
+                                    <constraint firstItem="lnC-vq-pvr" firstAttribute="centerY" secondItem="4gr-IX-Nqt" secondAttribute="centerY" id="qsz-wR-HGj"/>
+                                    <constraint firstItem="fQg-eh-z5Y" firstAttribute="top" secondItem="SCr-Mf-fW4" secondAttribute="top" constant="6" id="sRV-hi-oRz"/>
+                                    <constraint firstItem="4gr-IX-Nqt" firstAttribute="leading" secondItem="lnC-vq-pvr" secondAttribute="trailing" constant="8" id="ydF-rr-JhF"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="qeo-XD-P2E" firstAttribute="centerY" secondItem="Pjo-8R-9GC" secondAttribute="centerY" id="0Vo-DZ-txe"/>
                             <constraint firstItem="nqS-Sa-u5T" firstAttribute="top" secondItem="XGV-20-CzZ" secondAttribute="bottom" constant="8" id="1xN-fe-g1v"/>
-                            <constraint firstItem="Vai-Mi-1e1" firstAttribute="trailing" secondItem="LV8-am-Vhu" secondAttribute="trailing" constant="16" id="4za-gt-G1D"/>
-                            <constraint firstItem="LEg-dp-OfI" firstAttribute="width" secondItem="Vai-Mi-1e1" secondAttribute="width" id="7eW-hQ-C2O"/>
                             <constraint firstItem="Vai-Mi-1e1" firstAttribute="bottom" secondItem="GRJ-RZ-ANp" secondAttribute="bottom" constant="20" id="9NZ-2n-xzH"/>
                             <constraint firstItem="1Z4-SD-wFc" firstAttribute="leading" secondItem="Vai-Mi-1e1" secondAttribute="leading" constant="20" id="Lgj-L2-fN7"/>
-                            <constraint firstItem="LV8-am-Vhu" firstAttribute="centerY" secondItem="Pjo-8R-9GC" secondAttribute="centerY" id="OiU-Hm-oL9"/>
                             <constraint firstItem="XGV-20-CzZ" firstAttribute="top" secondItem="tJo-KH-Ag2" secondAttribute="bottom" constant="8" id="QlA-kO-T0g"/>
                             <constraint firstItem="Vai-Mi-1e1" firstAttribute="trailing" secondItem="XGV-20-CzZ" secondAttribute="trailing" constant="20" id="SaK-eg-GHg"/>
-                            <constraint firstItem="Pjo-8R-9GC" firstAttribute="top" secondItem="nqS-Sa-u5T" secondAttribute="bottom" constant="12" id="UU7-fk-Psb"/>
-                            <constraint firstItem="Vai-Mi-1e1" firstAttribute="trailing" secondItem="Pjo-8R-9GC" secondAttribute="trailing" constant="20" id="WPH-pM-j8B"/>
                             <constraint firstItem="nqS-Sa-u5T" firstAttribute="leading" secondItem="Vai-Mi-1e1" secondAttribute="leading" constant="20" id="Y2c-w9-Xch"/>
                             <constraint firstItem="Vai-Mi-1e1" firstAttribute="trailing" secondItem="nqS-Sa-u5T" secondAttribute="trailing" constant="20" id="YEK-ZB-wUi"/>
-                            <constraint firstItem="Pjo-8R-9GC" firstAttribute="leading" secondItem="qeo-XD-P2E" secondAttribute="trailing" constant="8" id="aWy-GZ-dgz"/>
                             <constraint firstItem="tJo-KH-Ag2" firstAttribute="top" secondItem="Vai-Mi-1e1" secondAttribute="top" constant="8" id="bjr-94-au2"/>
+                            <constraint firstItem="Vai-Mi-1e1" firstAttribute="trailing" secondItem="SCr-Mf-fW4" secondAttribute="trailing" constant="20" id="fED-hP-9yS"/>
                             <constraint firstItem="tJo-KH-Ag2" firstAttribute="centerX" secondItem="Vai-Mi-1e1" secondAttribute="centerX" id="gQT-9f-vMe"/>
-                            <constraint firstItem="qeo-XD-P2E" firstAttribute="leading" secondItem="Vai-Mi-1e1" secondAttribute="leading" constant="16" id="j8I-v1-ezu"/>
+                            <constraint firstItem="SCr-Mf-fW4" firstAttribute="top" secondItem="nqS-Sa-u5T" secondAttribute="bottom" constant="12" id="h0g-Pl-V2j"/>
                             <constraint firstItem="Vai-Mi-1e1" firstAttribute="trailing" secondItem="GRJ-RZ-ANp" secondAttribute="trailing" constant="20" id="kbb-e1-O2S"/>
-                            <constraint firstItem="LEg-dp-OfI" firstAttribute="centerX" secondItem="Vai-Mi-1e1" secondAttribute="centerX" id="loR-IX-nVE"/>
-                            <constraint firstItem="LEg-dp-OfI" firstAttribute="bottom" secondItem="Pjo-8R-9GC" secondAttribute="bottom" id="npC-GA-CrI"/>
                             <constraint firstItem="XGV-20-CzZ" firstAttribute="leading" secondItem="Vai-Mi-1e1" secondAttribute="leading" constant="20" id="qRu-eM-sI1"/>
                             <constraint firstItem="1Z4-SD-wFc" firstAttribute="top" secondItem="Vai-Mi-1e1" secondAttribute="top" constant="20" id="qYd-6M-e5Y"/>
                             <constraint firstItem="GRJ-RZ-ANp" firstAttribute="leading" secondItem="Vai-Mi-1e1" secondAttribute="leading" constant="20" id="rHl-bb-FQ9"/>
                             <constraint firstItem="tJo-KH-Ag2" firstAttribute="width" secondItem="tJo-KH-Ag2" secondAttribute="height" multiplier="1:1" id="tQ1-NM-3im"/>
+                            <constraint firstItem="SCr-Mf-fW4" firstAttribute="leading" secondItem="Vai-Mi-1e1" secondAttribute="leading" constant="20" id="x2C-Uv-Lu2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Vai-Mi-1e1"/>
                     </view>
                     <connections>
-                        <outlet property="inputTextField" destination="Pjo-8R-9GC" id="grq-K7-1uG"/>
+                        <outlet property="inputTextField" destination="4gr-IX-Nqt" id="xlI-eA-v8j"/>
+                        <outlet property="inputTextFieldContainerView" destination="SCr-Mf-fW4" id="60J-nL-mc8"/>
+                        <outlet property="inputTextFieldTitle" destination="fQg-eh-z5Y" id="Kxm-vH-Dtu"/>
                         <outlet property="nextButton" destination="GRJ-RZ-ANp" id="RD3-tO-jtF"/>
                         <outlet property="nextButtonBottomConstraint" destination="9NZ-2n-xzH" id="GEb-F0-n0N"/>
                         <outlet property="subtitleLabel" destination="nqS-Sa-u5T" id="q5W-zu-9LP"/>
@@ -143,7 +152,7 @@
     </scenes>
     <resources>
         <image name="onboarding-back-button" width="30" height="30"/>
-        <image name="onboarding-clear-text-button" width="14" height="14"/>
         <image name="onboarding-icon-leaf" width="48" height="48"/>
+        <image name="onboarding-icon-us-flag" width="20" height="20.25"/>
     </resources>
 </document>
